# Lab-more-project

./: .coverage  README.md  chat.py  docsum.py  endpoint.py  gradio_server.py  pyproject.toml  test_llm.py
.github/workflows/: integration-tests.yml
docsum_src/: __init__.py  chat.py  docsum.py  llm.py
tests/: test_chat.py  test_integration.py  test_tools.py
tools/: ls.py
