[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc-csci005-miaurosevic"
version = "0.1.0"
description = "A simple LLM-based chat and text summarization tool."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mia Urosevic", email = "your-email@example.com" }]
keywords = ["chat", "LLM", "text summarization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

# Packages: tells setuptools which folders to include
packages = ["docsum_pkg"]

[project.scripts]
# Command line script: `chat` command runs repl() in chat.py
chat = "docsum_pkg.chat:repl"